--- a/bc-forum/src/main/resources/application.yml
+++ b/bc-forum/src/main/resources/application.yml
@@ -4,3 +4,13 @@ service-url:
   users: "https://jsonplaceholder.typicode.com/users"
   posts: "https://jsonplaceholder.typicode.com/posts"
   comments: "https://jsonplaceholder.typicode.com/comments"
+
+spring.datasource:
+  driverClassName: "org.postgresql.Driver"
+  url: "jdbc:postgresql://localhost:5432/postgres"
+  username: "postgres"
+  password: "admin1234"
+
+spring.jpa:
+  show-sql: true
+  hibernate.ddl-auto: update
