--- a/demo-coingecko/src/main/resources/application.yml
+++ b/demo-coingecko/src/main/resources/application.yml
@@ -1,7 +1,20 @@
+spring.datasource:
+  driverClassName: "org.postgresql.Driver"
+  url: "jdbc:postgresql://localhost:5432/postgres"
+  username: "postgres"
+  password: "admin1234"
+
+spring.jpa:
+  show-sql: true
+  hibernate.ddl-auto: update
+  properties:
+    hibernate:
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+
 service:
   coingecko:
     host:
-      demo: "/api.coingecko.com"
+      demo: "api.coingecko.com"
       pro: "pro-api.coingecko.com"
     api:
       key-name: "x-cg-demo-api-key"
@@ -10,6 +23,8 @@ service:
         version: "api/v3"
         endpoint: "/coins/markets"
 
-# http GET 'https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin'
-
-# x-cg-demo-api-key:CG-NwCy3TmdJv6BKZwCEAHfuVxp
+spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
